2021-12-11  6.9.12-33  <quetzlzacatenango@image...> 
  * Release ImageMagick version 6.9.12-33 GIT revision 16...

2021-12-11  6.9.12-33  Dirk Lemstra <dirk@lem.....org>
  * Improved adjustment of page offset when resizing an image.

2021-12-04  6.9.12-32  <quetzlzacatenango@image...> 
  * Release ImageMagick version 6.9.12-32 GIT revision 16936:e35c98c5a:20211204

2021-11-27  6.9.12-32  <quetzlzacatenango@image...>
  * set threads to 1 when using ASAN to avoid false positive memory leaks.

2021-11-21  6.9.12-31  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-31 GIT revision 16917:149fb8a34:20211121

2021-11-21  6.9.12-31  Dirk Lemstra <dirk@lem.....org>
  * Fixed an OpenCL build problem.

2021-11-20  6.9.12-30  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-30 GIT revision 16912:dda7d0bb7:20211120

2021-11-14  6.9.12-30  <quetzlzacatenango@image...>
  * Fix integer overflow (reference
    https://github.com/ImageMagick/ImageMagick6/issues/168).
  * eliminate runtime error: applying zero offset to null pointer.

2021-11-14  6.9.12-29  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-29 GIT revision 16895:ba084f6bd:20211114

2021-11-14  6.9.12-29  <quetzlzacatenango@image...>
  * Fix broken release.

2021-10-29  6.9.12-28  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-28 GIT revision 16883:4b5c30c0b:20211029

2021-10-28  6.9.12-28  Dirk Lemstra <dirk@lem.....org>
  * Fix stack overflow when parsing malicious PS image file (report from
    Muhammad Aldo Firmansyah).

2021-10-25  6.9.12-27  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-27 GIT revision 16873:60fcc2499:20211025

2021-10-25  6.9.12-27  <quetzlzacatenango@image...>
  * fix x64 Windows build.

2021-10-24  6.9.12-26  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-26 GIT revision 16871:3430fb87b:20211024

2021-10-11  6.9.12-26  <quetzlzacatenango@image...>